--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "homepage": "https://KAcodes.github.io/E-Commerce-Website",
+    "homepage": "http://KAcodes.github.io/E-Commerce-Website",
     "name": "e-commerce",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
